# prview

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  NOTES.md  QA_REPORT.md  README.md  SPEC.md  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/save-note/: SKILL.md
.diffnav/: reviews.json
history/: 2026-04-02-initial-setup.md  CHANGELOG.md  README.md
skills/dev-session/: SKILL.md  setup.sh
skills/prview/: SKILL.md  open-pane.sh
spike/: FINDINGS.md  stdin_tty_spike.py
src/prview/: __init__.py  __main__.py  app.py  cli.py  diff_parser.py  git.py  models.py  state.py
src/prview/styles/: app.tcss
src/prview/widgets/: diff_view.py  file_list.py  help.py
tests/: conftest.py  test_diff_parser.py  test_diff_view.py  test_file_list.py  test_git.py  test_keybindings.py  test_state.py  user_simulator.py
tests/fixtures/: sample.diff
