[project]
name = "prview"
version = "0.1.0"
description = "Interactive terminal diff browser"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.40.0",
    "unidiff>=0.7.0",
]

[project.scripts]
prview = "prview.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prview"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
